# sqlx-test

./: Cargo.toml  build.rs
.github/workflows/: build.yml
.sqlx/: query-5a8b45a9d6db20442cc1d54a5cf8e2485f6563f83c7d6a565d122e50523bf94d.json  query-5b84d6fc3a2f6dfb3d23ac8bb411d31870dc6ee2bf5efae3dcbdd7148dc46504.json  query-7f376d31c034e2cd23d6e0706c96cc023d4566173b9325c198cf3ca03399aea5.json  query-ba4c799dd1e5d9a6481796b302b3654427183e2247f56cd6f5c590062fadb5f9.json  query-e638e6298169ee3c827bee120715ca084ebfcf2b726e2171c3eb9bdfcc33e0a6.json
migrations/: 1_create_foo.sql  2_add_magic_text.sql
src/: main.rs
src/sql/: get_foo.sql  insert_foo.sql
