[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }

dotenv = "0.15.0"

anyhow = "1.0.72"

[build-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15.0"
anyhow = "1.0.72"